cicd/kustomize/overlays/prod/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`demo.prod.com`)
      kind: Rule
      services:
        - name: demo
          port: 8888
